# ihstay

./: CLAUDE.md  Cargo.toml  INSTALL.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: iterm2.rs  lib.rs  wezterm.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/app/src/: commands.rs  main.rs  plugin_install.rs  plugin_watch.rs  services.rs  state.rs  tray.rs  wsl_env_setup.rs
crates/app/ui/hud/: index.html  style.css
crates/app/ui/settings/: index.html  style.css
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: end_to_end.rs
docs/: release-checklist.md
docs/release-notes/: v0.4.0-rename-to-ihstay.md
docs/superpowers/plans/: 2026-05-11-rename-to-ihstay.md
openspec/changes/add-wsl-support/: tasks.md
openspec/changes/add-wsl-support/specs/pending-board/: spec.md
openspec/changes/fix-wsl-multi-distro-and-cli-socket/: design.md  proposal.md  tasks.md
openspec/changes/fix-wsl-multi-distro-and-cli-socket/specs/pending-board/: spec.md
openspec/specs/pending-board/: spec.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: ihstay.md
plugin/hooks/: pending_hook.ps1  pending_hook.sh
scripts/: smoke-test-auto.ps1  smoke-test.ps1  smoke-test.sh  test-hook.ps1
