[workspace]
members = ["crates/core", "crates/adapters", "crates/app"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/sadwx/ihstay"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
notify-debouncer-full = "0.4"
sysinfo = "0.33"
toml = "0.8"
thiserror = "2"
tempfile = "3"
