[package]
name = "ihstay-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ihstay-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
dirs-next = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
