[package]
name = "ihstay-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ihstay-core = { path = "../core" }
ihstay-adapters = { path = "../adapters" }
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs-next = "2"
chrono = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"
sysinfo = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
