[package]
name = "ihstay-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs-next = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }
